03 - Images index.png

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="utff-8">
 <title>Site web-studii "Web-DECO"</title>
 </HEAD>
-<BODY>
+<BODY background="images/bg.jpg">
 
 </BODY>
 </HTML>
