03 - body index.png

--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
 <title>Site web-studii "Web-DECO"</title>
 </HEAD>
 <BODY background="images/bg.jpg">
+<table border="1" align="center" cellpadding="10" width="70%">
+<tr>
+<td colspan="2" height="150" align="right" hspace+"5">(name of site)</tr><tr>
+<td colspan="2">(gorizontal menu)</td>
+</tr>
+<tr>
+<td width="30%" valign="top">(menu c leva)</td>
+<td width="70%">(text slayda)</td>
+</tr>
+<tr>
+<td colspan="2" valign="middle" height="90">(nuz slayda)</td>
+</tr>
+</table>
+
 
 </BODY>
 </HTML>
